--- a/composer.json
+++ b/composer.json
@@ -26,5 +26,10 @@
         },
         "files": [
         ]
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "Hxc\\Pay\\Command\\Init::postInstallCmd"
+        ]
     }
 }
